<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memerius</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title">Memerius</string>
    <string name="image_button_desc">Just a picture</string>
    <string name="score_text">YOUR SCORE</string>
    <string name="current_score">0</string>
    <string name="btn_restart">RESTART</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="btn_play_string">Play</string>
    <string name="btn_exit_string">Exit</string>
    <string name="text_time">TIME</string>
    <string name="current_time">00:35</string>
    <string name="highscore_btn">Highscore</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="highscore_btn_name">NAME</string>
    <string name="highscore_btn_score">SCORE</string>
    <string name="text_highscore">HIGHSCORE</string>
    <string name="name_hint">name</string>

</resources>
